<resources>
    <string-array name="nav_drawer_items">
        <item>Placeholders</item>
        <item>Spellings</item>
        <item>Cloud storage</item>
    </string-array>
    <string name="nav_drawer_item_already_up">Already up</string>
    <string name="nav_drawer_item_already_ph">Already working on a Placeholder</string>
    <string name="app_name">VegNab</string>
    <string name="empty_string"></string>
    <string name="under_construction">Not implemented yet</string>
    <string name="action_settings">Settings</string>
    <string name="action_app_info">App info</string>
    <string name="action_legal_notices">Legal Notices</string>
    <string name="action_edit_proj">Edit Project</string>
    <string name="action_new_proj">New Project</string>
    <string name="action_delete_proj">Delete Project</string>
    <string name="action_new_plottype">New Plot Type</string>
    <string name="action_export_db">Export database</string>
    <string name="action_hide_visit">Hide Visit</string>
    <string name="action_unhide_visits">Un-hide Visits</string>
    <string name="action_visit_info">Visit details</string>
    <string name="action_delete_visit">Delete Visit</string>
    <string name="action_export_visit">Export Visit</string>
    <string name="action_unhide_visit">Un-hide Visit</string>
    <string name="action_delete_namer">Delete Namer</string>
    <string name="action_donate">Donate</string>
    <string name="default_project">MyProject</string>
    <string name="default_plottype">Species List</string>
    <string name="action_affirm">OK</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_save">Save</string>
    <string name="action_toggle">Toggle</string>
    <string name="action_swap">Swap</string>
    <string name="msg_help">Help</string>
    <string name="msg_help_apology">Help is Under Construction</string>
    <string name="err_need_2_chars">Need at least 2 characters</string>
    <string name="err_need_3_chars">Need at least 3 characters</string>
    <string name="new_visit_title">Start a new visit</string>
    <string name="new_visit_plot_type">Of Plot Type</string>
    <string name="new_visit_plot_type_prompt">Plot Type</string>
    <string name="new_visit_project">In the Project</string>
    <string name="new_visit_project_prompt">Project</string>
    <string name="new_visit_existing">Work on an exisitng Visit</string>
    <string name="new_visit_go_button_msg">Start a new Visit</string>
    <string name="new_visit_no_visits_msg">No Visits yet</string>
    <string name="new_visit_hide_visit_done">Visit hidden</string>
    <string name="new_visit_show_visit_done">Visit shown</string>
    <string name="new_visit_unhide_visit_none">No hidden Visits</string>
    <string name="new_visit_unhide_visit_hdr">Visit to un-hide</string>
    <string name="unhide_vis_details">Tap the Visit to un-hide</string>
    <string name="new_vis_ctx_export_no_info">Info missing, can\'t export Visit.</string>
    <string name="dnld_spp_no_spp_title">No Species List</string>
    <string name="dnld_spp_no_spp_msg">You need to download the NRCS species list.\r\n\r\n The download is about 8Mb and requires network connectivity.</string>
    <string name="dnld_spp_btn_start">Download Species List</string>
    <string name="dnld_spp_btn_show_all">Display all Downloads</string>
    <string name="dnld_spp_btn_ck_status">Check Status of Download</string>
    <string name="dnld_spp_btn_cancel">Cancel the current Download</string>
    <string name="dnld_spp_title">Species Download</string>
    <string name="dnld_spp_descr">Android Data download using DownloadManager.</string>
    <string name="dnld_spp_pls_wait">Getting species list from server, please wait...</string>
    <string name="dnld_spp_canceled">Download of the file cancelled</string>
    <string name="dnld_spp_done">Downloading of data just finished</string>
    <string name="dnld_spp_parsed">File parsed into database</string>
    <string name="empty_projects">No Projects yet</string>
    <string name="empty_plottypes">No Plot Types yet</string>
    <string name="empty_namers">No Namers yet</string>
    <string name="empty_data">No data yet</string>
    <string name="missing_project">Please select a Project, or create a new one.</string>
    <string name="missing_plottype">Please select a Plot Type, or set up a new one.</string>
    <string name="missing_namer">Please select a Namer, or enter a new one.</string>
    <string name="edit_proj_title_add">New Project</string>
    <string name="edit_proj_title_edit">Edit Project</string>
    <string name="edit_proj_label_projcode">Project Code, up to 10 characters</string>
    <string name="edit_proj_hint_projcode">Brief code</string>
    <string name="edit_proj_label_overall">You can edit the following fields later:</string>
    <string name="edit_proj_label_descr">Longer description of this project</string>
    <string name="edit_proj_hint_descr">Project description</string>
    <string name="edit_proj_label_person">Who to contact about this project</string>
    <string name="edit_proj_hint_person">Contact person</string>
    <string name="edit_proj_label_context">Overall context of this data set</string>
    <string name="edit_proj_hint_context">Project context</string>
    <string name="edit_proj_label_caveats">Any user considerations about data</string>
    <string name="edit_proj_hint_caveats">Data caveats</string>
    <string name="edit_proj_label_timeframe">The timeframe of this data set:</string>
    <string name="edit_proj_label_date_start">From</string>
    <string name="edit_proj_hint_date_start">Start date</string>
    <string name="edit_proj_label_date_end">To</string>
    <string name="edit_proj_hint_date_end">End date</string>
    <string name="edit_proj_msg_no_proj">Need Project Code</string>
    <string name="edit_proj_msg_dup_proj">Duplicate Project Code</string>
    <string name="del_proj_details">Can\'t delete first Project, current Project, or Projects with Visits</string>
    <string name="del_proj_confirm">Delete Project?</string>
    <string name="visit_header_title">Visit Header Information</string>
    <string name="visit_header_label_name">Memorable short name for this Visit, up to 16 characters</string>
    <string name="visit_header_hint_name">Visit Name</string>
    <string name="visit_header_label_date">Date</string>
    <string name="visit_header_hint_date">Visit Date</string>
    <string name="visit_header_label_namer">Person naming the species</string>
    <string name="visit_header_hint_namer">Species namer</string>
    <string name="visit_header_label_scribe">Optional: if someone besides the Namer is entering data</string>
    <string name="visit_header_hint_scribe">Scribe</string>
    <string name="visit_header_label_location">Reference location. Long-press for options.</string>
    <string name="visit_header_hint_location">Location</string>
    <string name="visit_header_label_azimuth">If azimuth is relevant to this visit</string>
    <string name="visit_header_hint_azimuth">Azimuth</string>
    <string name="visit_header_label_notes">Notes</string>
    <string name="visit_header_hint_notes">Notes</string>
    <string name="loc_manual_header">Enter location</string>
    <string name="loc_prev_header">Previous location</string>
    <string name="loc_edit_header">Edit location</string>
    <string name="latitude_label">Latitude: </string>
    <string name="longitude_label">Longitude: </string>
    <string name="accuracy_label">Accuracy (m): </string>
    <string name="loc_vw_acc">accuracy</string>
    <string name="loc_vw_m">m</string>
    <string name="loc_vw_targacc">target accuracy</string>
    <string name="loc_vw_acq">acquired</string>
    <string name="loc_vw_from">from</string>
    <string name="loc_vw_by">by</string>
    <string name="loc_vw_cont_acq">continuing to acquire</string>
    <string name="loc_vw_not_knw">(not known)</string>
    <string name="loc_manual_entry_msg_no_latitude">Need Latitude</string>
    <string name="loc_manual_entry_msg_no_longitude">Need Longitude</string>
    <string name="loc_manual_entry_msg_no_accuracy">Need Accuracy</string>
    <string name="loc_manual_entry_msg_latitude_bad">Need a number for Latitude, between -90 and 90</string>
    <string name="loc_manual_entry_msg_longitude_bad">Need a number for Longitude between -180 and 180</string>
    <string name="loc_manual_entry_msg_accuracy_bad">Need a number for Accuracy, zero means not known</string>
    <string name="action_use_prev_visit_loc">Use Location from ...</string>
    <string name="prev_visit_locs_hdr">Location to use</string>
    <string name="prev_vis_loc_details">Tap the Location to use</string>
    <string name="visit_header_go_button_msg">Start subplots</string>
    <string name="visit_header_map_button_msg">Map more locations</string>
    <string name="visit_header_photo_button_msg">Add pictures</string>
    <string name="add_namer_title">Species Namer</string>
    <string name="add_namer_header">Person\'s name who will be deciding the species</string>
    <string name="add_namer_msg">This should be an identifiable human, not something untraceable like \"team two\"</string>
    <string name="add_namer_hint">Person\'s Name</string>
    <string name="add_namer_missing">Need person\'s Name</string>
    <string name="add_namer_duplicate">Duplicate Name</string>
    <string name="edit_namer_title_edit">Edit Namer</string>
    <string name="edit_spp_item_label_sppitem">Code: Description</string>
    <string name="edit_spp_item_label_dup_notice">"\n\rThis is already entered.\n\rYou can only enter it again at a different Confidence or the duplicate will not be saved.\n\r"</string>
    <string name="edit_spp_item_label_height">Plant height, in centimeters</string>
    <string name="edit_spp_item_hint_height">Height</string>
    <string name="edit_spp_item_label_cover">Plant cover, percent</string>
    <string name="edit_spp_item_hint_cover">Cover</string>
    <string name="edit_spp_item_label_present">This species is Present (un-check to verify that it is Absent)</string>
    <string name="edit_spp_item_label_present_do_not_ask">Assume that species I enter are Present, and auto-verify them (for this session)</string>
    <string name="edit_spp_item_label_confidence">Confidence of species identity</string>
    <string name="edit_placeholder_title">Placeholder</string>
    <string name="edit_placeholder_label_code">Code</string>
    <string name="edit_placeholder_hint_code">Code</string>
    <string name="edit_placeholder_label_description">Description</string>
    <string name="edit_placeholder_hint_description">Description of the plant</string>
    <string name="edit_placeholder_label_habitat">Habitat</string>
    <string name="edit_placeholder_hint_habitat">Habitat where found</string>
    <string name="edit_placeholder_label_labelnumber">Label number or other identifier</string>
    <string name="edit_placeholder_hint_labelnumber">Specimen identifier, if used</string>
    <string name="edit_placeholder_save_button_msg">Save</string>
    <string name="edit_placeholder_cancel_button_msg">Cancel</string>
    <string name="manage_phs_lbl_namer_spinner">Placeholders of:</string>
    <string name="manage_phs_hint_namer_spinner">Namer</string>
    <string name="manage_phs_lbl_sort_spinner">Sort:</string>
    <string name="manage_phs_hint_sort_spinner">Sort</string>
    <string name="manage_phs_hint_search">Type here to search Placeholders</string>
    <string name="manage_phs_txt_ck_not_idd">Show only Placeholder not identified yet</string>
    <string name="manage_phs_list_empty">(no Placeholders)</string>
    <string name="spellings_lbl_table_spinner">Fix spellings of:</string>
    <string name="spellings_spinner_hint">Choose</string>
    <string name="spellings_list_empty">(No items)</string>
</resources>