<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

<RelativeLayout
    android:id="@+id/edit_project"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >

    <TextView
        android:id="@+id/lbl_projcode"
        android:text="@string/edit_proj_label_projcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <EditText
        android:id="@+id/txt_projcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/lbl_projcode"
        android:layout_below="@id/lbl_projcode"
        android:hint="@string/edit_proj_hint_projcode"
        android:inputType="text"
        android:maxLines="1"
        android:maxLength="10"
		/>

    <TextView
        android:id="@+id/lbl_overall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/txt_projcode"
        android:layout_below="@id/txt_projcode"
        android:text="@string/edit_proj_label_overall"
        />

    <TextView
        android:id="@+id/lbl_descr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/lbl_overall"
        android:layout_below="@id/lbl_overall"
        android:text="@string/edit_proj_label_descr"
        />

    <EditText
        android:id="@+id/txt_descr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/lbl_descr"
        android:layout_below="@id/lbl_descr"
        android:hint="@string/edit_proj_hint_descr"
        android:inputType="textMultiLine"
        android:gravity="top|left"
        android:maxLength="255"
         />

    <TextView
        android:id="@+id/lbl_person"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/txt_descr"
        android:layout_below="@id/txt_descr"
        android:text="@string/edit_proj_label_person"
        />

    <EditText
        android:id="@+id/txt_person"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/lbl_person"
        android:layout_below="@id/lbl_person"
        android:hint="@string/edit_proj_hint_person"
        android:inputType="textPersonName|textCapWords"
        android:gravity="top|left"
        android:maxLines="1"
        android:maxLength="255"
         />
    
    <TextView
        android:id="@+id/lbl_context"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/txt_person"
        android:layout_below="@id/txt_person"
        android:text="@string/edit_proj_label_context"
        />

    <EditText
        android:id="@+id/txt_context"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/lbl_context"
        android:layout_below="@id/lbl_context"
        android:hint="@string/edit_proj_hint_context"
        android:inputType="textMultiLine"
        android:gravity="top|left"
        android:maxLength="255"      
         />
    
    <TextView
        android:id="@+id/lbl_caveats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/txt_context"
        android:layout_below="@id/txt_context"
        android:text="@string/edit_proj_label_caveats"
        />

    <EditText
        android:id="@+id/txt_caveats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/lbl_caveats"
        android:layout_below="@id/lbl_caveats"
        android:hint="@string/edit_proj_hint_caveats"
        android:inputType="textMultiLine"
        android:gravity="top|left"
        android:maxLength="255"      
         />

    <TextView
        android:id="@+id/lbl_timeframe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/txt_caveats"
        android:layout_below="@id/txt_caveats"
        android:text="@string/edit_proj_label_timeframe"
        />

    <TextView
        android:id="@+id/lbl_date_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/lbl_timeframe"
        android:layout_below="@id/lbl_timeframe"
        android:text="@string/edit_proj_label_date_start"
        />

    <EditText
        android:id="@+id/txt_date_from"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/lbl_date_from"
        android:layout_below="@id/lbl_date_from"
        android:hint="@string/edit_proj_hint_date_start"
        android:focusable="false"
        android:inputType="date"
        android:maxLength="10" />

    <TextView
        android:id="@+id/lbl_date_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/txt_date_from"
        android:layout_below="@id/txt_date_from"
        android:text="@string/edit_proj_label_date_end"
        />

    <EditText
        android:id="@+id/txt_date_to"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/lbl_date_to"
        android:layout_below="@id/lbl_date_to"
        android:hint="@string/edit_proj_hint_date_end"
        android:focusable="false"
        android:inputType="date"
        android:maxLength="10" />
        
</RelativeLayout>
</ScrollView>
