<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <item
        android:id="@+id/action_visit_info"
        android:orderInCategory="280"
        android:title="@string/action_visit_info"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_delete_visit"
        android:orderInCategory="300"
        android:title="@string/action_delete_visit"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_export_visit"
        android:orderInCategory="320"
        android:title="@string/action_export_visit"
        app:showAsAction="never"/>
    
    <item
        android:id="@+id/action_visit_help"
        android:orderInCategory="340"
        android:title="@string/msg_help"
        app:showAsAction="never"/>
    
</menu>
