<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/ScrollViewHd"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent" >

<RelativeLayout
	android:id="@+id/placeholder_layout"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	>

	<TextView
		android:id="@+id/placeholder_title_text"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/edit_placeholder_title" />

	<TextView
		android:id="@+id/lbl_placeholder_code"
		android:text="@string/edit_placeholder_label_code"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignLeft="@id/placeholder_title_text"
		android:layout_below="@id/placeholder_title_text"
		/>

	<EditText
		android:id="@+id/txt_placeholder_code"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignLeft="@id/lbl_placeholder_code"
		android:layout_below="@id/lbl_placeholder_code"
		android:hint="@string/edit_placeholder_hint_code"
		android:inputType="text"
		android:maxLength="16" />

	<TextView
		android:id="@+id/lbl_placeholder_description"
		android:text="@string/edit_placeholder_label_description"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignLeft="@id/txt_placeholder_code"
		android:layout_below="@id/txt_placeholder_code"
		/>

	<EditText
		android:id="@+id/txt_placeholder_description"
		android:hint="@string/edit_placeholder_hint_description"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignLeft="@id/lbl_placeholder_description"
		android:layout_below="@id/lbl_placeholder_description"
		android:inputType="textMultiLine"
		android:gravity="top|left"
		android:maxLength="255" />

	<TextView
		android:id="@+id/lbl_placeholder_habitat"
		android:text="@string/edit_placeholder_label_habitat"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignLeft="@id/txt_placeholder_description"
		android:layout_below="@id/txt_placeholder_description"
		/>

	<EditText
		android:id="@+id/txt_placeholder_habitat"
		android:hint="@string/edit_placeholder_hint_habitat"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignLeft="@id/lbl_placeholder_habitat"
		android:layout_below="@id/lbl_placeholder_habitat"
		android:inputType="textMultiLine"
		android:gravity="top|left"
		android:maxLength="255" />

	<TextView
		android:id="@+id/lbl_placeholder_labelnumber"
		android:text="@string/edit_placeholder_label_labelnumber"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignLeft="@id/txt_placeholder_habitat"
		android:layout_below="@id/txt_placeholder_habitat"
		/>

	<EditText
		android:id="@+id/txt_placeholder_labelnumber"
		android:hint="@string/edit_placeholder_hint_labelnumber"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignLeft="@id/lbl_placeholder_labelnumber"
		android:layout_below="@id/lbl_placeholder_labelnumber"
		android:inputType="textMultiLine"
		android:gravity="top|left"
		android:maxLength="255" />

	<Button
		android:id="@+id/placeholder_save_button"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/edit_placeholder_save_button_msg"
		android:padding="10dp"
		android:layout_alignLeft="@id/txt_placeholder_labelnumber"
		android:layout_below="@id/txt_placeholder_labelnumber"
		/>
	<Button
		android:id="@+id/placeholder_cancel_button"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/edit_placeholder_cancel_button_msg"
		android:padding="10dp"
		android:layout_alignLeft="@id/placeholder_save_button"
		android:layout_below="@id/placeholder_save_button"
		/>
</RelativeLayout>
</ScrollView>
