<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >

    <TextView
        android:id="@+id/lbl_fix_spellings_for"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:text="@string/spellings_lbl_table_spinner"
        />
    <Spinner
        android:id="@+id/fix_spellings_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/lbl_fix_spellings_for"
        android:layout_below="@id/lbl_fix_spellings_for"
        android:prompt="@string/spellings_spinner_hint"
        />

    <View android:id="@+id/fix_spellings_divider_line"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_alignLeft="@id/fix_spellings_spinner"
        android:layout_below="@id/fix_spellings_spinner"
        />

    <ListView android:id="@id/android:list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:drawSelectorOnTop="false"
         android:layout_alignLeft="@id/fix_spellings_divider_line"
         android:layout_below="@id/fix_spellings_divider_line"
         />

    <TextView android:id="@id/android:empty"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/spellings_list_empty"
         android:layout_alignLeft="@id/android:list"
         android:layout_below="@id/android:list"
         android:textAppearance="?android:attr/textAppearanceLarge"
         />

</RelativeLayout>
